resolve contrast issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,9 @@ $link-color: #2762ae;
 @import "overrides/dropdowns";
 @import "overrides/menu--user";
 
+dt {
+  color:black;
+}
 .navigation {
   z-index: 2;
 }
